[project]
name = "safespace-ai-therapist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0",
    "geopy>=2.4.1",
    "googlemaps>=4.10.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "ollama>=0.6.1",
    "pydantic>=2.13.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
    "twilio>=9.10.5",
    "uvicorn>=0.44.0",
]
